before playing with set date

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ Part of Hacktiv8 Challenge -->
   </head>
   <body>
     <h1>Seismic-O-Meter</h1>
-    <h2>We will going back home in ...</h2>
+    <h2 class="message">We will going back home in ...</h2>
     <div id="countdown" class="countdown">
       <div class="time">
         <h2 id="days">00</h2>
@@ -45,7 +45,7 @@ Part of Hacktiv8 Challenge -->
     /> -->
     <p>
       For Educational Purpose by
-      <a href="http://linkeding/in/aldien">Aldien</a>
+      <a href="http://linkedin.com/in/aldien" target="_blank">Aldien</a>
     </p>
     <script src="script.js"></script>
   </body>
