working seismic-o-meter

--- a/index.html
+++ b/index.html
@@ -32,17 +32,13 @@ Part of Hacktiv8 Challenge -->
         <small>seconds</small>
       </div>
     </div>
-    <div class="CXdate">
-      <button id="setCXdate" class="setCXdate">
-        Set Crew Change Date
-      </button>
+
+    <div class="container-date" id="setDate">
+      <p>Set Departure Date:</p>
+      <input type="date" id="departureDate" />
+      <input id="btnDepartureDate" type="button" value="Submit" />
     </div>
-    <!-- <img
-      src="./img/spinner.gif"
-      alt="Be Patient! The Crew Change has been planned by Admin"
-      id="loading"
-      class="loading"
-    /> -->
+
     <p>
       For Educational Purpose by
       <a href="http://linkedin.com/in/aldien" target="_blank">Aldien</a>
